<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_account"
        android:icon="@mipmap/ic_person_black_24dp"
        android:onClick="onNavigationItemSelected"
        android:title="@string/my_account" />

    <item android:id="@+id/nav_add_classe"
        android:icon="@mipmap/ic_queue_black_24dp"
        android:onClick="onNavigationItemSelected"
        android:title="@string/add_classes" />

    <item android:id="@+id/nav_settings"
        android:icon="@mipmap/ic_settings_black_24dp"
        android:onClick="onNavigationItemSelected"
        android:title="@string/settings" />

    <item android:id="@+id/nav_logout"
        android:icon="@mipmap/ic_exit_to_app_black_24dp"
        android:onClick="onNavigationItemSelected"
        android:title="@string/log_out" />
</menu>