<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.studybuddy.studybuddy.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="203dp"
        android:layout_height="165dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ansel_adams_snake_river_grand"
        app:layout_constraintBottom_toTopOf="@+id/profile_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="385dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/profile_label_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@+id/profile_school"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <EditText
        android:id="@+id/profile_school"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/profile_label_school"
        app:layout_constraintBottom_toTopOf="@+id/profile_major"
        app:layout_constraintEnd_toEndOf="@+id/profile_major"
        app:layout_constraintStart_toStartOf="@+id/profile_major"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <EditText
        android:id="@+id/profile_major"
        android:layout_width="67dp"
        android:layout_height="0dp"
        android:layout_marginBottom="22dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/profile_label_major"
        app:layout_constraintBottom_toTopOf="@+id/profile_classes_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_school" />

    <EditText
        android:id="@+id/profile_classes_label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="124dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/profile_label_classes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_major" />

    <TextView
        android:id="@+id/profile_classes"
        android:layout_width="353dp"
        android:layout_height="76dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_classes_label"
        app:layout_constraintVertical_bias="0.093" />
</android.support.constraint.ConstraintLayout>
